--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>veegil</title>
+    <title>Veegil</title>
     <link rel="manifest" href="manifest.json" />
 
     <script>
